kubernetes/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chegueni-ouadid-benabdelaziz

---
apiVersion: v1
kind: Service
metadata:
  name: svc-redis
  namespace: chegueni-ouadid-benabdelaziz
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: svc-rabbitmq
  namespace: chegueni-ouadid-benabdelaziz
spec:
  selector:
    app: rabbitmq
  ports:
  - name: amqp
    port: 5672
    targetPort: 5672
  - name: management
    port: 15672
    targetPort: 15672

---
apiVersion: v1
kind: Service
metadata:
  name: svc-api
  namespace: chegueni-ouadid-benabdelaziz
spec:
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: svc-front
  namespace: chegueni-ouadid-benabdelaziz
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 80

---
# Ingress Rules
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculator-ingress
  namespace: chegueni-ouadid-benabdelaziz
spec:
  ingressClassName: nginx
  rules:
  - host: calculatrice-binome1-binome2.polytech-dijon.kiowy.net
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: svc-api
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-front
            port:
              number: 80
